# Django-Third-Party-Service

./: README.md  manage.py  pyproject.toml
app/: admin.py  exceptions.py  models.py  permissions.py  urls.py  views.py
app/management/commands/: update_views.py
app/migrations/: 0001_initial.py
prj/: asgi.py  settings.py  urls.py  wsgi.py
